yaml/namespace.yaml
# kubetpl:syntax:$

---
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE
  labels:
    name: $NAMESPACE
