yaml/httpbin-gateway-wildcard-host.yaml
# kubetpl:syntax:$

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: $NAME-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
